[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Props/treasure.png" type="Texture" id=1]
[ext_resource path="res://Props/WoodTreasure/WoodTreasure.gd" type="Script" id=2]
[ext_resource path="res://Overlap/Hurtboxes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Effects/CreateEffectObject.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/HUD_And_GUI/gold-key.png" type="Texture" id=5]
[ext_resource path="res://Assets/SFX/Mixkit/treasure_open.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 3 )

[sub_resource type="Animation" id=2]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "open"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 2 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9, 6 )

[sub_resource type="Animation" id=5]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -32 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="WoodTreasure" type="StaticBody2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -8 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 2 )
anims/open = SubResource( 3 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -6 )
shape = SubResource( 4 )

[node name="CreateEffectObject" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -12 )

[node name="KeyDrop" type="Node2D" parent="."]
position = Vector2( 0, -31 )

[node name="Sprite" type="Sprite" parent="KeyDrop"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -32 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="KeyDrop"]
autoplay = "default"
anims/default = SubResource( 5 )
anims/play = SubResource( 6 )

[node name="DropSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]
